# libprng

./: CMakeLists.txt  README.md  package.json
include/: prng.h
src/: prng.c  splitmix64.h  xoshiro256pp.h
test/: CMakeLists.txt  bool.c  double.c  int32-range.c  int32.c
